# libcpstamp

./: .gitignore  Makefile.am  configure.ac  libtool
Xcode/: File.exp  Info-Framework.plist
Xcode/CPStamp.xcodeproj/: project.pbxproj
Xcode/CPStamp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/Create DMG/: Create_DMG.1
Xcode/pkg-support/: CPStamp.info
data/: Makefile.am
po/: POTFILES.in  es.po  libcpstamp.pot
src/: Estructura del archivo de estampas  Makefile.am  cpstamp.c  cpstamp.h  cpstamp.pc  cpstamp.pc.in  path.c  path.h
